# SmallCompiler

./: CMakeLists.txt  Makefile  compile.c  error.c  global.h  init.c  lexer.c  lextest.c  prog1  prog2  prog3  prog4  symbol.c
